[gd_scene load_steps=8 format=2]

[ext_resource path="res://InputGesture.gd" type="Script" id=1]
[ext_resource path="res://gesture/base.png" type="Texture" id=2]
[ext_resource path="res://gesture/cursor.png" type="Texture" id=3]
[ext_resource path="res://gesture/icons_drag.png" type="Texture" id=4]
[ext_resource path="res://gesture/left_click.png" type="Texture" id=5]
[ext_resource path="res://gesture/icons_click.png" type="Texture" id=6]
[ext_resource path="res://gesture/right_click.png" type="Texture" id=7]

[node name="Input" type="Control"]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -180.0
margin_right = 180.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001

[node name="GesturePad" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GesturePad"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="TextureRect" parent="GesturePad"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 12, 12 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftClick" type="TextureRect" parent="GesturePad"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -32.0
margin_right = 64.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightClick" type="TextureRect" parent="GesturePad"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -32.0
margin_right = 64.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconsDrag" type="TextureRect" parent="GesturePad"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconsClick" type="TextureRect" parent="GesturePad"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
